@@ -1,16 +1,20 @@
 package com.springproject.quickchat.service;
 
+import com.springproject.quickchat.model.Discussion;
 import com.springproject.quickchat.model.Message;
 import com.springproject.quickchat.repository.DiscussionRepository;
-import com.springproject.quickchat.repository.InMemoryDiscussionRepository;
 import com.springproject.quickchat.repository.MessageRepository;
 import org.springframework.stereotype.Service;
+
+import java.util.ArrayList;
+import java.util.List;
 
 @Service
 public class MessageService {
 
-    private DiscussionRepository discussionRepository;
-    private MessageRepository messageRepository;
+    private final MessageRepository messageRepository;
+    private final DiscussionRepository discussionRepository;
+    private final List<Message> messages = new ArrayList<>();
 
     public MessageService(MessageRepository messageRepository, DiscussionRepository discussionRepository) {
         this.messageRepository = messageRepository;
@@ -24,35 +28,19 @@ public class MessageService {
         if (message.getContent().trim().isEmpty()) {
             throw new IllegalArgumentException("Le message ne peut pas être vide.");
         }
-        if (discussionRepository.findById(message.getDiscussionId()) == null) {
+
+        Discussion discussion = discussionRepository.findById(message.getDiscussionId());
+        if (discussion == null) {
             throw new IllegalArgumentException("La discussion spécifiée n'existe pas.");
         }
-        this.messageRepository.save(message);
+
+        messages.add(message);
+        messageRepository.save(message);
     }
 
-    /*public List<Message> getMessagesForDiscussion(String discussionId) {
+    public List<Message> getMessagesForDiscussion(String discussionId) {
         return messages.stream()
                 .filter(message -> message.getDiscussionId().equals(discussionId))
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    public Message editMessage(String messageId, String newContent) {
-        for (Message message : messages) {
-            if (message.getId().equals(messageId)) {
-                message.setContent(newContent);
-                return message;
-            }
-        }
-        throw new IllegalArgumentException("Message ID non trouvé : " + messageId);
-    }
-
-    public void deleteMessage(String messageId) {
-        for (Message message : messages) {
-            if (message.getId().equals(messageId)) {
-                message.markAsDeleted();
-                return;
-            }
-        }
-        throw new IllegalArgumentException("Message ID non trouvé : " + messageId);
-    }*/
 }
